[metadata]
name = vizdet
version = attr: vizdet.__version__
description = Vizualization for Detection and Tracking
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
keywords = visualization, tracking, object detection, computer vision
author = Tadej Svetina
url = https://github.com/traffic-ai/vizdet
license = Apache-2.0 License
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 3 - Alpha
    Topic :: Scientific/Engineering :: Image Recognition

[options]
packages = vizdet
install_requires =
  numpy
  opencv-python
  opencv-contrib-python 
python_requires=>=3.7
include_package_data = True

[options.extras_require]
tests = 
  pytest
  flake8
  black
  mypy

[flake8]
max-line-length = 88

[mypy]
exclude = setup.py